--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div style="background-color: #fef3c7; border: 1px solid #f59e0b; padding: 1rem; margin: 1rem; border-radius: 0.5rem;">
         <h1>John Doe - Full Stack Developer</h1>
         <p>This website requires JavaScript to function properly. Please enable JavaScript in your browser settings to view the full portfolio.</p>
-        <p>You can still contact me via email: <a href="mailto:lakindu@example.com">lakindu@example.com</a></p>
+        <p>You can still contact me via email: <a href="mailto:John@example.com">John@example.com</a></p>
       </div>
     </noscript>
     
